unpackaged/main/default/objects/Jobsite__c/Jobsite__c.object-meta.xml
<CustomObject>
    <label>Jobsite</label>
    <nameField>
        <label>Jobsite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobsites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>