unpackaged/main/default/objects/Jobsite__c/fields/IIR_Project_Plant_Link__c.field-meta.xml
<CustomField>
    <fullName>IIR_Project_Plant_Link__c</fullName>
    <label>IIR Project/Plant Link</label>
    <type>Url</type>
</CustomField>